app/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: todo-test
  name: todo-test
  namespace: todo-app
spec:
  containers:
  - image: nginx
    name: todo-test
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
