app/k8s/todo-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-09-04T10:18:00Z"
    labels:
      app: todo-frontend
    name: todo-service
    namespace: todo-app
    resourceVersion: "48363"
    uid: be108cf3-e2b6-4b47-8af9-2fff9103a08b
  spec:
    clusterIP: 10.110.69.23
    clusterIPs:
    - 10.110.69.23
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: todo-frontend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
