app/k8s/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
spec:
  ingressClassName: nginx
  rules:
  - host: "todo.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-service
            port:
              number: 80
